banner section is added with mobile responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navigation-bar flex margin-auto justify-between items-center">
+        <nav class="navigation-bar flex margin-auto justify-between items-center container">
             <div class="logo flex items-center">
                 <img src="assets/logo.png" alt="school bag type image is used as logo">
                 <span class="text-bold">SCHOOL</span>
@@ -30,18 +30,25 @@
             </div>
             <div class="ham-icon">
                 <i class="fa-solid fa-bars"></i>
-                <ul class="flex">
-                    <li><a href="home" class="text-orange">Home</a></li>
-                    <li><a href="about" class="text-sky-blue">About</a></li>
-                    <li><a href="facillities" class="text-dark-turquoise">Facillities</a></li>
-                    <li><a href="admission" class="text-majorelle-blue">Admission</a></li>
-                </ul>
             </div>
         </nav>
 
     </header>
     <main>
+         <!-- banner section -->
+         <div class="banner-container container flex items-center">
+            <div class="banner-description">
+                <h2>
+                    <span class="text-orange">Empowering</span><br> students from small age <span class="text-sky-blue">towards vision</span>
+                </h2>
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn">Enroll Now</button>
+            </div>
+            <div class="banner-image">
+                <img src="assets/hero-kids.png" alt="superman happy kid with blue and orange background">
+            </div>
 
+        </div>
     </main>
     <footer>
 
