--- a/index.html
+++ b/index.html
@@ -1,57 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
     <title>Kids education</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/utility.css">
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/utility.css" />
     <!-- font awsome -->
-    <script src="https://kit.fontawesome.com/f119302c59.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/f119302c59.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <header>
-        <nav class="navigation-bar flex margin-auto justify-between items-center container">
-            <div class="logo flex items-center">
-                <img src="assets/logo.png" alt="school bag type image is used as logo">
-                <span class="text-bold">SCHOOL</span>
-            </div>
-            <div class="nav-links">
-                <ul class="flex">
-                    <li><a href="home" class="text-orange">Home</a></li>
-                    <li><a href="about" class="text-sky-blue">About</a></li>
-                    <li><a href="facillities" class="text-dark-turquoise">Facillities</a></li>
-                    <li><a href="admission" class="text-majorelle-blue">Admission</a></li>
-                </ul>
-            </div>
-            <div class="nav-button btn">
-                Contact
-            </div>
-            <div class="ham-icon">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </nav>
-
+      <nav
+        class="navigation-bar flex margin-auto justify-between items-center container"
+      >
+        <div class="logo flex items-center">
+          <img
+            src="assets/logo.png"
+            alt="school bag type image is used as logo"
+          />
+          <span class="text-bold">SCHOOL</span>
+        </div>
+        <div class="nav-links">
+          <ul class="flex">
+            <li><a href="home" class="text-orange">Home</a></li>
+            <li><a href="about" class="text-sky-blue">About</a></li>
+            <li>
+              <a href="facillities" class="text-dark-turquoise">Facillities</a>
+            </li>
+            <li>
+              <a href="admission" class="text-majorelle-blue">Admission</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav-button btn">Contact</div>
+        <div class="ham-icon">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
     </header>
     <main>
-         <!-- banner section -->
-         <div class="banner-container container flex items-center">
-            <div class="banner-description">
-                <h2>
-                    <span class="text-orange">Empowering</span><br> students from small age <span class="text-sky-blue">towards vision</span>
-                </h2>
-                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-                <button class="btn">Enroll Now</button>
-            </div>
-            <div class="banner-image">
-                <img src="assets/hero-kids.png" alt="superman happy kid with blue and orange background">
-            </div>
-
+      <!-- banner section -->
+      <div class="banner-container container flex items-center">
+        <div class="banner-description">
+          <h2>
+            <span class="text-orange">Empowering</span><br />
+            students from small age
+            <span class="text-sky-blue">towards vision</span>
+          </h2>
+          <p>
+            With the courage, Confidence, Creativity and Compassion to make
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="btn">Enroll Now</button>
         </div>
+        <div class="banner-image">
+          <img
+            src="assets/hero-kids.png"
+            alt="superman happy kid with blue and orange background"
+          />
+        </div>
+      </div>
+
+      <section class="curriculum-section">
+        <div class="curriculum-container container">
+          <h3 class="section-heading">Standard Curriculum</h3>
+          <div class="curriculum-card-container flex">
+            <div
+              class="curriculum-card flex items-center justify-center flex-column"
+              id="curriculum-card-1"
+            >
+              <img
+                src="assets/kinder.png"
+                alt="banana apple milk bread in the image"
+              />
+              <h4 class="curriculum-card-heading">Kinder (3-6) Years</h4>
+              <p class="raleway-secondary curriculum-des">
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <button class="curriculum-button text-sky-blue">Read More</button>
+            </div>
+            <div
+              class="curriculum-card flex items-center justify-center flex-column"
+              id="curriculum-card-2"
+            >
+              <img
+                src="assets/elementary.png"
+                alt="banana books clock in the image"
+              />
+              <h4 class="curriculum-card-heading">Elementary School</h4>
+              <p class="raleway-secondary curriculum-des">
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <button class="curriculum-button text-orange">Read More</button>
+            </div>
+            <div
+              class="curriculum-card flex items-center justify-center flex-column"
+              id="curriculum-card-3"
+            >
+              <img
+                src="assets/elementary.png"
+                alt="banana books clock in the image"
+              />
+              <h4 class="curriculum-card-heading">Middle (10-16) Years</h4>
+              <p class="raleway-secondary curriculum-des">
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <button class="curriculum-button text-violet">Read More</button>
+            </div>
+          </div>
+          <div class="angle-button-container flex justify-center">
+            <span class="angle flex justify-center items-center">
+              <i class="fa-solid fa-angle-left"></i>
+            </span>
+            <span class="angle flex justify-center items-center">
+              <i class="fa-solid fa-angle-right"></i>
+            </span>
+          </div>
+        </div>
+      </section>
+      <section class="our-stories-section">
+        <div class="stories-container container">
+          <h3 class="section-heading">Our Story</h3>
+          <div class="stories-card-container container">
+            <div class="stories-card stories-card-1">
+              <img
+                src="assets/story-1.png"
+                alt="two children and one child is hugging is another"
+              />
+              <div class="stories-content stories-content-1">
+                <h4 class="stories-card-title-1">
+                  A fun toddler coloring training on classroom
+                </h4>
+                <p class="raleway-secondary">
+                  Beautiful branding for changes by Never Now in Australia.
+                  changes is a platform for open discussion in an inclusive and
+                  collaborative environment, providing the...
+                </p>
+                <div class="date raleway-secondary">November 19, 2019</div>
+              </div>
+            </div>
+            <div class="stories-card">
+              <img
+                src="assets/story-2.png"
+                alt="two children and one child is hugging is another"
+              />
+              <div class="stories-content">
+                <h4 class="stories-card-title">
+                  A fun toddler coloring training on classroom
+                </h4>
+                <div class="date raleway-secondary date-bg-green">
+                  November 19, 2019
+                </div>
+              </div>
+            </div>
+            <div class="stories-card">
+              <img
+                src="assets/story-3.png"
+                alt="two children and one child is hugging is another"
+              />
+              <div class="stories-content">
+                <h4 class="stories-card-title">
+                  A fun toddler coloring training on classroom
+                </h4>
+                <div class="date raleway-secondary date-bg-dark-blue">
+                  November 19, 2019
+                </div>
+              </div>
+            </div>
+            <div class="stories-card">
+              <img
+                src="assets/story-4.png"
+                alt="two children and one child is hugging is another"
+              />
+              <div class="stories-content">
+                <h4 class="stories-card-title">
+                  A fun toddler coloring training on classroom
+                </h4>
+                <div class="date raleway-secondary date-bg-green">
+                  September 10, 2019
+                </div>
+              </div>
+            </div>
+            <div class="stories-card">
+              <img
+                src="assets/story-5.png"
+                alt="two children and one child is hugging is another"
+              />
+              <div class="stories-content">
+                <h4 class="stories-card-title">
+                  A fun toddler coloring training on classroom
+                </h4>
+                <div class="date raleway-secondary date-bg-green">
+                  July 19, 2019
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="stories-button flex justify-center">
+            <button class="btn">View All</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-
+      <div class="footer-content container">
+        <div class="logo-about">
+          <div class="footer-logo flex items-center">
+            <img src="assets/logo.png" alt="school bag" />
+            <span class="footer-logo-name">Kids <br />Education</span>
+          </div>
+          <p>
+            We always provide extra care to our children. Our vision is to make
+            them future leader of this world. Our goal is to make them
+            technologically advanced
+          </p>
+        </div>
+        <div class="about-school">
+            <h4>About School</h4>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Facillities</a></li>
+            <li><a href="">Admission</a></li>
+          </ul>
+        </div>
+        <div class="social">
+            <h4>Keep In Touch</h4>
+          <div>
+            <img src="assets/fb.png" alt="" />
+            <img src="assets/dribble.png" alt="" />
+            <img src="assets/twitter.png" alt="" />
+            <img src="assets/google+.png" alt="" />
+          </div>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
