some responsive related bug fixed and marquee tag is added

--- a/index.html
+++ b/index.html
@@ -52,10 +52,17 @@
             students from small age
             <span class="text-sky-blue">towards vision</span>
           </h2>
-          <p>
+          <marquee direction="left" loop="-1">
+            <p>
+              With the courage, Confidence, Creativity and Compassion to make
+              their Unique Contribution in a Diverse and Dynamic World.
+            </p>
+          </marquee>
+          <p class="for-small-device">
             With the courage, Confidence, Creativity and Compassion to make
             their Unique Contribution in a Diverse and Dynamic World.
           </p>
+
           <button class="btn">Enroll Now</button>
         </div>
         <div class="banner-image">
@@ -154,7 +161,7 @@
               />
               <div class="stories-content">
                 <h4 class="stories-card-title">
-                  A fun toddler coloring training on classroom
+                  Find out if a school fits the family’s needs
                 </h4>
                 <div class="date raleway-secondary date-bg-green">
                   November 19, 2019
@@ -168,7 +175,7 @@
               />
               <div class="stories-content">
                 <h4 class="stories-card-title">
-                  A fun toddler coloring training on classroom
+                  Summer math & literacy centres for kids
                 </h4>
                 <div class="date raleway-secondary date-bg-dark-blue">
                   November 19, 2019
@@ -182,7 +189,7 @@
               />
               <div class="stories-content">
                 <h4 class="stories-card-title">
-                  A fun toddler coloring training on classroom
+                  Classroom management techniques for new tutors
                 </h4>
                 <div class="date raleway-secondary date-bg-green">
                   September 10, 2019
@@ -196,7 +203,7 @@
               />
               <div class="stories-content">
                 <h4 class="stories-card-title">
-                  A fun toddler coloring training on classroom
+                  Conversation rhymes improve kids listening
                 </h4>
                 <div class="date raleway-secondary date-bg-green">
                   July 19, 2019
@@ -224,7 +231,7 @@
           </p>
         </div>
         <div class="about-school">
-            <h4>About School</h4>
+          <h4>About School</h4>
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
@@ -233,7 +240,7 @@
           </ul>
         </div>
         <div class="social">
-            <h4>Keep In Touch</h4>
+          <h4>Keep In Touch</h4>
           <div>
             <img src="assets/fb.png" alt="" />
             <img src="assets/dribble.png" alt="" />
